# Borderless-Window-Helper

./: .gitignore  Borderless Window Helper.sln  README.md  main.h
Borderless Window Helper/: .clang-format  .gitignore  Borderless Window Helper.rc  Borderless Window Helper.vcxproj  Borderless-Window-Helper.rc  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  inifile.cpp  inifile.h  main.cpp  main.h  nana_subclassing.h  resource.h  tinyformat.h  util.cpp  util.h
Borderless Window Helper/cmake/: CPM.cmake  cv2pdb.cmake
